--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
 
   </nav>
 
+
+  <!-- Banner Section -->
+
+  <section class="bg-green-900 flex flex-col justify-center items-center text-center  h-[240px] px-4">
+    
+    <!-- Image -->
+    <img src="assets/logo-dark.png" 
+         alt="Banner Image" 
+         class="w-24 h-24 rounded-full shadow-lg mb-4">
+
+    <!-- Title -->
+    <h1 class="text-3xl md:text-4xl font-bold text-white mb-2">
+    Emergency Service Directory
+    </h1>
+
+    <!-- Subtitle -->
+    <p class="text-lg md:text-xl text-green-100 max-w-xl">
+      Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh
+    </p>
+
+  </section>
+
+
+
+
+
   <script>
     function copyText() {
       navigator.clipboard.writeText("Hello, Copied!").then(() => {
