--- a/practise.html
+++ b/practise.html
@@ -3,66 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>b12-A5-Assignment</title>
-  <script src="https://cdn.tailwindcss.com">/script>
-    <!--tailwind and daisyui cdn-->
-<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
+  <title>Emergency Service Directory</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-
-<body class="bg-gray-100">
-
-  <nav class="w-full flex justify-between items-center px-6 py-3 bg-white shadow-md">
-    
-    <!-- Left Side -->
-    <div class="flex items-center gap-3">
-      <img src="assets/logo.png" alt="Logo" class="w-10 h-10 rounded-full">
-      <span class="text-xl font-bold text-green-800">Emergency<br>service</span>
-    </div>
-
-    <!-- Right Side -->
-    <div class="flex items-center gap-6 text-2xl">
-      <span class="text-red-500 cursor-pointer">❤️</span>
-      <span class="text-yellow-500 cursor-pointer">🪙</span>
-      <button 
-        onclick="copyText()" 
-        class="px-4 py-1 text-sm font-semibold text-white bg-green-500 rounded-lg hover:bg-pink-500 transition">
-        Copy
-      </button>
-    </div>
-
-  </nav>
-
-
-  <!-- Banner Section -->
-
-  <section class="bg-[#013223] flex flex-col justify-center items-center text-center  h-[240px] px-4">
-    
-    <!-- Image -->
-    <img src="assets/logo-dark.png" 
-         alt="Banner Image" 
-         class="w-24 h-24 rounded-full shadow-lg mb-4">
-
-    <!-- Title -->
-    <h1 class="text-3xl md:text-4xl font-bold text-white mb-2">
-    Emergency Service Directory
-    </h1>
-
-    <!-- Subtitle -->
-    <p class="text-lg md:text-xl text-green-100 max-w-xl">
-      Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh
-    </p>
-
-  </section>
-
-
-
-
-<!--card section-->
-
-<section class="bg-gray-100 w-full">
+<section class="bg-gray-100">
 
   <div class="max-w-7xl mx-auto p-6">
     <h1 class="text-2xl font-bold text-center mb-6">Emergency Service Directory</h1>
@@ -237,20 +181,4 @@
   </div>
 
 </section>
-
-
-
-  <script>
-    function copyText() {
-      navigator.clipboard.writeText("Hello, Copied!").then(() => {
-        alert("Text Copied!");
-      });
-    }
-  </script>
-
-</body>
 </html>
-
-
-
-
