--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <!-- Card 2 -->
         <div class="bg-white shadow-md rounded-lg p-4 flex flex-col gap-3">
-          <img src="assets/police.png" class="w-10 h-10" alt="icon">
+          <img src="assets/police.png" class="w-10 h-10 bg-gray-200 rounded-lg" alt="icon">
           <div>
             <h2 class="text-lg font-bold text-gray-800">Police Helpline Number</h2>
             <p class="text-sm text-gray-500">Police</p>
@@ -102,7 +102,7 @@
 
         <!-- Card 3 -->
         <div class="bg-white shadow-md rounded-lg p-4 flex flex-col gap-3">
-          <img src="assets/fire.png" class="w-10 h-10" alt="icon">
+          <img src="assets/fire-service.png" class="w-10 h-10" alt="icon">
           <div>
             <h2 class="text-lg font-bold text-gray-800">Fire Service Number</h2>
             <p class="text-sm text-gray-500">Fire Service</p>
@@ -130,7 +130,7 @@
 
         <!-- Card 5 -->
         <div class="bg-white shadow-md rounded-lg p-4 flex flex-col gap-3">
-          <img src="assets/women.png" class="w-10 h-10" alt="icon">
+          <img src="assets/emergency.png" class="w-10 h-10" alt="icon">
           <div>
             <h2 class="text-lg font-bold text-gray-800">Women & Child Helpline</h2>
             <p class="text-sm text-gray-500">Helpline</p>
@@ -144,7 +144,7 @@
 
         <!-- Card 6 -->
         <div class="bg-white shadow-md rounded-lg p-4 flex flex-col gap-3">
-          <img src="assets/corruption.png" class="w-10 h-10" alt="icon">
+          <img src="assets/emergency.png" class="w-10 h-10" alt="icon">
           <div>
             <h2 class="text-lg font-bold text-gray-800">Anti-Corruption Helpline</h2>
             <p class="text-sm text-gray-500">Anti Corruption</p>
@@ -158,7 +158,7 @@
 
         <!-- Card 7 -->
         <div class="bg-white shadow-md rounded-lg p-4 flex flex-col gap-3">
-          <img src="assets/electricity.png" class="w-10 h-10" alt="icon">
+          <img src="assets/emergency.png" class="w-10 h-10" alt="icon">
           <div>
             <h2 class="text-lg font-bold text-gray-800">Electricity Helpline</h2>
             <p class="text-sm text-gray-500">Helpline</p>
@@ -186,7 +186,7 @@
 
         <!-- Card 9 -->
         <div class="bg-white shadow-md rounded-lg p-4 flex flex-col gap-3">
-          <img src="assets/railway.png" class="w-10 h-10" alt="icon">
+          <img src="assets/emergency.png" class="w-10 h-10" alt="icon">
           <div>
             <h2 class="text-lg font-bold text-gray-800">Bangladesh Railway Helpline</h2>
             <p class="text-sm text-gray-500">Railway</p>
@@ -247,7 +247,10 @@
       });
     }
   </script>
-
+<script src="script.js">
+    
+    
+</script>
 </body>
 </html>
 
